fix home overflow bug

--- a/src/views/home/styles/home.scss
+++ b/src/views/home/styles/home.scss
@@ -56,7 +56,7 @@
 }
 
 .hero {
-  min-height: 100vh;
+  min-height: calc(100vh - 64px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -71,7 +71,6 @@
     min-height: 400px;
     padding: 50px 200px;
     position: relative;
-    animation: float 6s ease-in-out infinite;
     display: flex;
     justify-content: center;
     align-items: center;
